# ghactions-python-pipeline

./: Dockerfile  README.md  ghactions-python-pipeline.spec  pyproject.toml
.github/workflows/: build.yml  ci.yml
